{
    "name": "WheelControlSensorInput",
    "maps": [
        {
            "name": "VehicleWheel",
            "id": "037577cd-9d0e-462a-937f-029d6de72d02",
            "actions": [
                {
                    "name": "Accel",
                    "type": "PassThrough",
                    "id": "888616c7-579c-4efd-8527-708e683af1eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Steer",
                    "type": "PassThrough",
                    "id": "455577db-93bb-4060-849b-d5608bfb6bad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Brake",
                    "type": "PassThrough",
                    "id": "27a09f05-a77b-4209-b710-af353ec2bc76",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonA",
                    "type": "PassThrough",
                    "id": "59312a63-d87f-4991-a404-426b8dfcaa04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonB",
                    "type": "PassThrough",
                    "id": "7f46a0eb-0050-49d4-bd15-dd187a4ff30c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonX",
                    "type": "PassThrough",
                    "id": "f8c5c1e7-bfad-48f3-a844-2bda89c29c45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonY",
                    "type": "PassThrough",
                    "id": "c4f8a72b-afe3-448d-896c-4b366b62b997",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonRB",
                    "type": "PassThrough",
                    "id": "c22f26a3-873d-4afe-9085-8b3fd32fff3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonLB",
                    "type": "PassThrough",
                    "id": "37d85537-6481-4742-864c-c36a343fb6c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonStart",
                    "type": "PassThrough",
                    "id": "e384c3ab-2f9b-4e19-b583-3c653f088a80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonSelect",
                    "type": "PassThrough",
                    "id": "ae7c3ac6-1379-4238-a41f-fc9091edc2fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonRSB",
                    "type": "PassThrough",
                    "id": "83e310ca-be8a-4d82-a1ea-1dbc08131851",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonLSB",
                    "type": "PassThrough",
                    "id": "f948e86f-4ed4-48ef-9772-f5e5fac8ec37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonCenter",
                    "type": "PassThrough",
                    "id": "9d981352-e4c1-4fd7-b199-8e339f31d4d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPad",
                    "type": "PassThrough",
                    "id": "1470b2f1-7873-4929-926b-fc30937dea0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bed5fb37-63ac-4233-850e-a9e14a6a203b",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e46b7fbe-610e-4421-a188-f631133056e7",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9556cee8-daea-4154-b0b5-39cf87329e20",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f564dea-9879-4600-99be-7b33abf9d05b",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62d31aaa-3ef4-44f1-aa07-65401643ca96",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c4a7659-7989-4829-a2bb-b6067a77b358",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9ddbe73-def5-4e00-afd9-9cd54179ac5d",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/trigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8537f36d-f294-4103-b2a1-825657ad8c1b",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Trigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dbfa0de-c0e9-4235-b1cb-179f8f54ce88",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc976bf4-0745-4116-98d3-e2a76713a068",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Thumb",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12cddf58-a50f-4b3c-bd49-1dd09dc4bc5a",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button3",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8140ae56-83bc-43c4-91b3-72c738a65e42",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Thumb2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c48d30f-d4b7-4918-83fc-d141309b1bff",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button4",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9378683b-1749-48e6-bf91-f42543a61ff6",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Top",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3428280-2044-4494-a71d-8876ccc378db",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "636e0b69-3e2b-4879-91c6-00b1161766cd",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Top2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc92cf1c-2647-4b2e-99c4-2ef7883f4dcb",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da0c14b8-1c5d-4d3b-8fcc-0676a90e32d3",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Pinkie",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1fbb4a0-cd63-4a72-84bc-e27bb2fa6387",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button7",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2257a097-7d75-48ca-a15c-3a673a3b8e63",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Base",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "978313b2-9e48-4479-ae0c-defb6a04acfa",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button8",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0272537-424d-431c-8333-30bb462c1db5",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Base2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "533f135e-d206-4e92-8448-e104dcceedc8",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button9",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRSB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e65f0c6-ca81-425c-8c8c-ea4970967ee7",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Base3",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRSB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8b5f0be-5ae7-4af0-a08c-8750cd61b429",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button10",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLSB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d82b876-f25b-460d-b0cf-6e937ef9676e",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Base4",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonLSB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5084feaa-62d9-47db-995c-a8c3b28ef2ca",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/button11",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonCenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6119989e-a435-4d18-b3c3-c05bbb1b6448",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Base5",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonCenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b4a74245-fb08-41e8-ad8d-1f61857d5d8f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a7325f94-c632-413e-9e47-dee272324d3c",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6f2aeda4-1b33-4970-9d5f-3c7211868a15",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a4e08757-fc90-4c4e-a67c-d3ef308650e6",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d3c50b20-52f4-47b2-96f4-edb5cbee34a9",
                    "path": "<HID::Logitech G920 Driving Force Racing Wheel for Xbox One>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "c17d2f10-b018-407f-be1e-dc7e4203aaff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9fd13902-02a1-48c7-a622-65ddacfacc3e",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2a0446a0-646f-4b32-9693-7c30637ea4eb",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cb91eeab-35ac-41dc-8d2f-34195b8a5310",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f2f38962-9b2c-406c-bf86-e4a31a582614",
                    "path": "<Linux::LogitechInc::LogitechG920DrivingForceRacingWheel>/Hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
     ],
    "controlSchemes": []
}